--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,53 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* background: url("/static/images/soft_gradient.png");
+  background-repeat: no-repeat; */
+  /* width: "100%";
+  height: "100%"; */
+  background-size: cover;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper {
+  /* height: 100vh; */
+  /*This part is important for centering*/
+  display: grid;
+  /* place-items: center; */
+  padding: 24px;
+  /* width: 550px; */
+}
+
+.typing-demo {
+  width: 40ch;
+  animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+.quote-typewriter {
+  width: "100%";
+  animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+  /* white-space: nowrap; */
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
 }
